Fix the datepicker issue on firefox

--- a/Applications/Bec.TargetFramework/MainLine/Presentation/Bec.TargetFramework.Presentation.Web/Content/css/your_style.css
+++ b/Applications/Bec.TargetFramework/MainLine/Presentation/Bec.TargetFramework.Presentation.Web/Content/css/your_style.css
@@ -264,6 +264,7 @@
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next {
   color: #a1c324;
+  cursor: pointer;
 }
 .ui-datepicker td .ui-state-hover {
   background: #a1c324;
